# backend

./: .gitignore  Cargo.toml  README.md  api.conf  compose.yml  nginx-temp.conf  nginx.conf
.sqlx/: query-04d6691e6132fd96fd7186ded292676b6d174ad7ab190449f13066f802d91f84.json  query-06e4db2c2e059d63cb7656a0f4223b81456f2638ede0a22e2bf7933d4456e2b2.json  query-1c757c606da127ec64f6b46c1687f2059959f5e7d1e8886dab044f5155092c31.json  query-284775432655209a09c917d1987ab2c70fabce27c3055567c21a3f046a0b2211.json  query-442cc3425b1bac8e32896ab11c9d5d5380b4e3a126afb64f1476ba8959a0db1d.json  query-48fba48878022bc7af6be54d101e1c10d48b32bf8997fd20967d75d593c1a251.json  query-4d641dbcfc8c0771261973d4277108611d67e683db2614964972a87bc062aa6f.json  query-50fe94edf857563219321e54544d4bb8f8d5f6916d32910d3fa1051d6c9bffa7.json  query-9cdb3a3b6a657ea7e18008a401ce25c49971b9cf988bf847b72f47b38ce30a23.json  query-c12757cff109b57b389af6aaf77e4a54dc7e506a3945306fd403cb062858c56f.json  query-c6120052799a7ed9d6c6c6ae80c0e12779f0fa964db7a6449a72b3ce4b82d0f5.json  query-c7809eb33a5205eecf50599e86a7e33d6a226b3f774462ad412d9ad1fc2362f9.json  query-c7d3a5e0d47c8795ceb8bfb8889d5410c783ba4f794a5dfe0952a1f81da73746.json  query-da354d5e6ac6a5d7b8749836189213fffd0e4c00618d8bbe353316b428306b05.json  query-e1db20e4f487d507dfdcb2f1da6c71a8779ee138587ab7aa5744be65e3f7796f.json  query-e5518eb82a22e49118c4b6531678f87a3bac33d024744ec95b9ce3864a411528.json  query-f79b8c0d03466864054d6672c353a9d83a5f262f0ac20e2dc10e9a45756fa8ba.json  query-f95fc565990f7ab13b5f237d0539de2c217fe183cba5cd59e0d73e0a353f5024.json
assets/: compose.yml  config.toml.example
migrations/: 20250614192218_user_beatmap.sql  20250614192219_score.sql  20250614192220_fixtures.sql  20250614192221_add_hash.sql  20250614192222_alter_beatmapset.sql  20250614192223_beatmapset_osu_id.sql  20250614192224_user.sql  20250614192225_modify_valid_status.sql  20250614192226_ranked_match.sql  20250614192227_improve_ranked_match.sql  20250614192228_ranked_queue.sql
public/: home.html  index.html
src/: config.rs  (+3 more)
(+59 files in other folders)
