[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["Osef <osefcode@gmail.com>"]
description = "A template for building REST APIs with Axum and SQLx"
license = "MIT"
repository = "http://localhost:3000/osef/template-axum-sqlx-api.git"
readme = "README.md"
keywords = ["api", "axum", "sqlx", "postgres", "rest"]
categories = ["web-programming::http-server", "database"]

[lib]
name = "backend"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "bigdecimal", "macros"] }

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
bigdecimal = { version = "0.4.0", features = ["serde"] }
# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4.34", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Security
argon2 = "0.5"

# Configuration
config = "0.15.11"
toml = "0.8"

# System metrics
sysinfo = "0.35"

# OpenAPI / Swagger
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Additional dependencies
async-trait = "0.1"
futures = "0.3"
include_dir = "0.7.4"
fake = { version = "4", features = ["derive"] }
once_cell = "1.21.3"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5.2", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
serde_json = "1.0"
tempfile = "3.8"
backend = { path = "." }
